--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
+    "swiper": "^7.0.9",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
